--- a/MPfm/MPfm.Player/MPfm.Player.Android.csproj
+++ b/MPfm/MPfm.Player/MPfm.Player.Android.csproj
@@ -79,6 +79,9 @@
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bass.Net.android">
+      <HintPath>..\MPfm.Sound\Lib\Android\Bass.Net.android.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
