--- a/MPfm/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.csproj
@@ -77,7 +77,6 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Reactive, Version=1.0.10621.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
@@ -87,6 +86,9 @@
     <Reference Include="Mono.Posix" />
     <Reference Include="taglib-sharp">
       <HintPath>Lib\taglib-sharp.dll</HintPath>
+    </Reference>
+    <Reference Include="Bass.Net">
+      <HintPath>Lib\Bass.Net.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -145,5 +147,8 @@
     <Compile Include="Readers\XingInfoHeaderReader.cs" />
     <Compile Include="BassNetKey.cs" />
     <Compile Include="MyBassNetKey.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Lib\Bass.Net.dll" />
   </ItemGroup>
 </Project>
