--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Classes\Controllers\EqualizerPresetDetailsViewController.designer.cs">
       <DependentUpon>EqualizerPresetDetailsViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Managers\Events\LoadPeakFileEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
