iOS: Added all controls for EqualizerPresetDetailsViewController. Added a toolbar, scrollbar with MPfmEqualizerFaderView, etc. iOS: Added MPfmEqualizerFaderView, a control to be used in a scroll view to present a slider with EQ fader values.
Related to issue #405.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -197,6 +197,7 @@
       <DependentUpon>EqualizerPresetDetailsViewController.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Managers\Events\LoadPeakFileEventArgs.cs" />
+    <Compile Include="Classes\Controls\MPfmEqualizerFaderView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
