iOS: The wave form view is now inside a scroll view. This will allow zooming and scrolling inside the wave form. Added interfaces for future multi-platform wave form rendering.
Related to issue #405.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -198,6 +198,9 @@
     </Compile>
     <Compile Include="Classes\Managers\Events\LoadPeakFileEventArgs.cs" />
     <Compile Include="Classes\Controls\MPfmEqualizerFaderView.cs" />
+    <Compile Include="Classes\Managers\IWaveFormRenderer.cs" />
+    <Compile Include="Classes\Managers\iOSWaveFormRenderer.cs" />
+    <Compile Include="Classes\Controls\MPfmWaveFormScrollView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
