iOS: Finally fixed P/Invoke BASS_FXGet/BASS_FXSet bug by adding a custom overload in BassWrapper.cs.
Related to issue #405.

--- a/MPfm/MPfm.Sound/MPfm.Sound.iOS.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.iOS.csproj
@@ -213,5 +213,6 @@
     <Compile Include="Readers\XingInfoHeaderReader.cs" />
     <Compile Include="BassNetKey.cs" />
     <Compile Include="MyBassNetKey.cs" />
+    <Compile Include="BassNetWrapper\BassWrapper.cs" />
   </ItemGroup>
 </Project>
