EqualizerPresets/EqualizerPresetDetails: Saving now works. Added TinyMessenger message to notify EQ preset change. Lot of bug fixes. iOS: Fixed UISlider image resizing/tiling. SQLiteGateway/MonoSQLiteGateway: Fixed bug in Insert/Update where the number of fields would not match the number of properties with setters. Also fixed bug with saving decimal number values.
Related to issue #397, issue #405 and issue #417.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -299,5 +299,6 @@
     <Compile Include="Presenters\Interfaces\IEqualizerPresetDetailsPresenter.cs" />
     <Compile Include="Presenters\EqualizerPresetsPresenter.cs" />
     <Compile Include="Presenters\EqualizerPresetDetailsPresenter.cs" />
+    <Compile Include="Messages\EqualizerPresetUpdatedMessage.cs" />
   </ItemGroup>
 </Project>
