iOS: Added MPfmEqualizerPresetGraphView and MPfmOutputMeterView controls. Output Meter is not finished yet (problems with CPU performance), but the Preset Graph is already looking really good! Player: Added GetMixerData for output meters.
Related to issue #397, issue #405 and issue #417.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -202,6 +202,8 @@
     <Compile Include="Classes\Managers\iOSWaveFormRenderer.cs" />
     <Compile Include="Classes\Controls\MPfmWaveFormScrollView.cs" />
     <Compile Include="Classes\Controls\Events\MPfmEqualizerFaderValueChangedEventArgs.cs" />
+    <Compile Include="Classes\Controls\MPfmEqualizerPresetGraphView.cs" />
+    <Compile Include="Classes\Controls\MPfmOutputMeterView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
