--- a/MPfm/MPfm.Sound/MPfm.Sound.iOS.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.iOS.csproj
@@ -214,5 +214,6 @@
     <Compile Include="BassNetKey.cs" />
     <Compile Include="MyBassNetKey.cs" />
     <Compile Include="BassNetWrapper\BassWrapper.cs" />
+    <Compile Include="BassNetWrapper\BaseFx.cs" />
   </ItemGroup>
 </Project>
