--- a/MPfm/MPfm.Sound/MPfm.Sound.Android.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.Android.csproj
@@ -152,5 +152,6 @@
     <Compile Include="BassNetKey.cs" />
     <Compile Include="MyBassNetKey.cs" />
     <Compile Include="BassNetWrapper\BassWrapper.cs" />
+    <Compile Include="BassNetWrapper\BaseFx.cs" />
   </ItemGroup>
 </Project>
