--- a/MPfm/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.csproj
@@ -151,5 +151,6 @@
     <Compile Include="BassNetKey.cs" />
     <Compile Include="MyBassNetKey.cs" />
     <Compile Include="BassNetWrapper\BassWrapper.cs" />
+    <Compile Include="BassNetWrapper\BaseFx.cs" />
   </ItemGroup>
 </Project>
