Mac: Added button for Sync. SyncDiscoveryService: Added parallels tasks for pinging, but the result is always success suddenly... weird.
Related to issue #418.

--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -297,6 +297,8 @@
     <Content Include="Resources\16x16\fam\pencil.png" />
     <Content Include="Resources\16x16\fam\accept.png" />
     <Content Include="Resources\16x16\fam\add.png" />
+    <Content Include="Resources\32x32\tango\network-wireless.png" />
+    <Content Include="Resources\16x16\tango\network-wireless.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
