Sync: The sync listener now returns the library index at /index and all audio files at /audiofile/id. Sync: The sync discovery is now simply using WebClient to ping servers in a subnet with a short 100ms timeout. This is way better than using the Ping class. Moved TinyIoC and TinyMessenger to MPfm.Core. Moved AudioFileCacheService and SongBrowserQueryEntity to MPfm.Library. Renamed SongBrowserQueryEntity to LibraryQuery. Added XmlSerialization to MPfm.Core to serialize objects to XML in a string object.
Related to issue #418.

--- a/MPfm/MPfm.Core/MPfm.Core.Android.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.Android.csproj
@@ -102,5 +102,8 @@
     <Compile Include="Helpers\XMLHelper.cs" />
     <Compile Include="Network\IPAddressRangeFinder.cs" />
     <Compile Include="Network\WebClientTimeout.cs" />
+    <Compile Include="TinyIoC\TinyIoC.cs" />
+    <Compile Include="TinyIoC\TinyMessenger.cs" />
+    <Compile Include="XmlSerialization.cs" />
   </ItemGroup>
 </Project>
