--- a/MPfm/MPfm.Library/MPfm.Library.Android.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.Android.csproj
@@ -161,5 +161,9 @@
     <Compile Include="Services\Interfaces\ISyncListenerService.cs" />
     <Compile Include="Services\Interfaces\ISyncClientService.cs" />
     <Compile Include="Services\SyncClientService.cs" />
+    <Compile Include="Services\AudioFileCacheService.cs" />
+    <Compile Include="Services\Interfaces\IAudioFileCacheService.cs" />
+    <Compile Include="Objects\LibraryQuery.cs" />
+    <Compile Include="Messages\AudioFileCacheUpdatedMessage.cs" />
   </ItemGroup>
 </Project>
