Sync: Listener can now serve a web app from files embedded in an assembly. Bug fixes. Sync: Added structure for web app.
Related to issue #418.

--- a/MPfm/MPfm.Library/MPfm.Library.Android.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.Android.csproj
@@ -165,5 +165,6 @@
     <Compile Include="Services\Interfaces\IAudioFileCacheService.cs" />
     <Compile Include="Objects\LibraryQuery.cs" />
     <Compile Include="Messages\AudioFileCacheUpdatedMessage.cs" />
+    <Compile Include="Objects\SyncDevice.cs" />
   </ItemGroup>
 </Project>
