--- a/MPfm/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.csproj
@@ -108,6 +108,10 @@
     <Content Include="Lib\System.Data.SQLite.dll" />
     <Content Include="Lib\System.Data.SQLite.Linq.dll" />
     <Content Include="Lib\System.Reactive.dll" />
+    <EmbeddedResource Include="WebApp\css\app.css" />
+    <EmbeddedResource Include="WebApp\js\app.js" />
+    <EmbeddedResource Include="WebApp\js\jquery-1.9.1.min.js" />
+    <EmbeddedResource Include="WebApp\index.html" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
@@ -134,6 +138,9 @@
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Services\Interfaces\" />
+    <Folder Include="WebApp\" />
+    <Folder Include="WebApp\js\" />
+    <Folder Include="WebApp\css\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database\MonoSQLiteGateway.cs" />
@@ -158,7 +165,6 @@
     <Compile Include="Services\Interfaces\ILibraryService.cs" />
     <Compile Include="Services\SyncDiscoveryService.cs" />
     <Compile Include="Services\Interfaces\ISyncDiscoveryService.cs" />
-    <Compile Include="Services\SyncListenerService.cs" />
     <Compile Include="Services\Interfaces\ISyncListenerService.cs" />
     <Compile Include="Services\Interfaces\ISyncClientService.cs" />
     <Compile Include="Services\SyncClientService.cs" />
@@ -166,5 +172,7 @@
     <Compile Include="Services\Interfaces\IAudioFileCacheService.cs" />
     <Compile Include="Objects\LibraryQuery.cs" />
     <Compile Include="Messages\AudioFileCacheUpdatedMessage.cs" />
+    <Compile Include="Objects\SyncDevice.cs" />
+    <Compile Include="Services\SyncListenerService.cs" />
   </ItemGroup>
 </Project>
