Sync: Now able to upload files with multipart/form-data, which means files can be uploaded via JavaScript and a web interface!
Related to issue #418.

--- a/MPfm/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.csproj
@@ -112,6 +112,7 @@
     <EmbeddedResource Include="WebApp\js\app.js" />
     <EmbeddedResource Include="WebApp\js\jquery-1.9.1.min.js" />
     <EmbeddedResource Include="WebApp\index.html" />
+    <EmbeddedResource Include="WebApp\js\jquery.upload-1.0.2.min.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
