Sync: Added device specifications interface to be added to every platform. More bug fixes in listener.
Related to issue #408.

--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Windows\SyncWindow.designer.cs">
       <DependentUpon>SyncWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\MacSyncDeviceSpecifications.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
