iOS: Added iOSSyncDeviceSpecifications.
Related to issue #418.

--- a/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
@@ -212,5 +212,6 @@
     <Compile Include="Messages\AudioFileCacheUpdatedMessage.cs" />
     <Compile Include="Objects\SyncDevice.cs" />
     <Compile Include="Services\SyncListenerService.cs" />
+    <Compile Include="ISyncDeviceSpecifications.cs" />
   </ItemGroup>
 </Project>
