--- a/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -74,6 +74,10 @@
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bass.Net.android, Version=2.4.10.0, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\MPfm.Sound\Lib\Android\Bass.Net.android.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Posix" />
