--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -202,6 +202,7 @@
       <DependentUpon>SyncWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\MacSyncDeviceSpecifications.cs" />
+    <Compile Include="Controls\MPfmSliderCell.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
